cmake_minimum_required(VERSION 3.15)
project(balls)
 
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
find_package(OpenCV REQUIRED)
 
file(GLOB_RECURSE SOURCES src/*.cpp)
 
add_executable(main ${SOURCES})
 
target_include_directories(main PRIVATE
    ${CMAKE_SOURCE_DIR}/include
    ${OpenCV_INCLUDE_DIRS}
)
 
target_link_libraries(main PRIVATE
    ${OpenCV_LIBS}
)